--- a/global.css
+++ b/global.css
@@ -1,8 +1,45 @@
+:root {
+    --day-bg-color :#ffff;
+    --night-bg-color :#0F051B;
+    --text-day-color: var(--night-bg-color);
+    --text-night-color: #F8F7FC;
+    --footer-day-color: #FFFAF3;
+    --footer-night-color: #1D1428;
+    --grain-day: 0.06;
+    --grain-night: 1;
+
+    --day-market: #FCFBFB;
+    --night-market: var(--footer-night-color);
+    --start-night : linear-gradient(180deg, rgba(29, 20, 40, 0) 0%, #1D1428 100%);
+    --start-day : linear-gradient(180deg, rgba(250, 250, 250, 0.42) 0%, #FCFBFC 100%);
+
+    
+    
+    --text-day-night: var(--text-night-color);
+    --background: var(--night-bg-color);
+    --footer-bg: var(--footer-night-color);
+    --grain-a: var(var(--grain-night));
+    --night-elem: block;
+    --day-elem: none;
+    --invert: invert(0) saturate(1);
+    --market-bg: var(--night-market);
+    --slider-itm-bg: var(--footer-night-color);
+    --start-bg: var(--start-night);
+}
 *{
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
-    color:white;
+    color: var(--text-day-night);
     z-index: -1;
+}
+.invert{
+    filter: var(--invert);
+}
+.day{
+    display: var(--day-elem);
+}
+.night{
+    display: var(--night-elem);
 }
 .fixScroll{
     overflow: hidden;
@@ -12,14 +49,14 @@ body{
     overflow-x: hidden;
     margin:unset;
     width: 100vw;
-    background-color: #0F051B;
+    background-color: var(--background);
     position: relative;
 }
 body::before{
     content:'';
-    background: url(assets/grain_small.png);
+    background: url(assets/grain_m.png);
     background-position: top;
-    background-size: 300px 300px;
+    background-size: auto;
     background-repeat: repeat;
     width: 100%;
     height: 100%;
@@ -27,6 +64,7 @@ body::before{
     z-index: 0;
     top: 0;
     left: 0;
+    opacity: var(--grain-a);
 }
 .above-grain{
     z-index: 1;
