--- a/home.css
+++ b/home.css
@@ -14,7 +14,7 @@
     font-size: 55px;
     line-height: 120%;
     font-family: 'Sora', sans-serif;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin:unset;
     z-index: 1;
     position: relative;
@@ -27,7 +27,7 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 180%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin:unset;
     width: 85%;
 }
@@ -36,7 +36,7 @@
     margin-top:62px;
     margin-left: 80px;
     text-decoration-line: underline;
-    color: #FFF2EE;
+    /* color: #FFF2EE; */
     cursor: pointer;
     position: relative;
     width: 110px;
@@ -78,7 +78,7 @@
     font-weight: 600;
     font-size: 36px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 
 .download-wrapper{
@@ -114,7 +114,7 @@
 
 
 /* hero float */
-#hero-blur{
+.hero-blur{
     position: absolute;
     width: 303.18px;
     height: 561px;
@@ -124,7 +124,7 @@
     filter: blur(300px);
     transform: rotate(58.27deg);
 }
-#hero-blur-2{
+.hero-blur-2{
     position: absolute;
     width: 303.18px;
     height: 561px;
@@ -133,6 +133,12 @@
     background: rgba(115, 37, 192, 0.35);
     filter: blur(300px);
     transform: rotate(58.27deg);
+}
+.hero-blur.day{
+    background: rgba(217, 254, 253, 0.75);
+}
+.hero-blur-2.day{
+    background: rgba(162, 178, 151, 0.23);
 }
 #line-hero{
     position: absolute;
@@ -152,7 +158,7 @@
     font-weight: 600;
     font-size: 48px;
     line-height: 130%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     text-align: center;
     margin: unset;
 }
@@ -170,7 +176,7 @@
 .market-table{
     width:100%;
     padding: 70px 48px;
-    background: #1D1428;
+    background-color: var(--market-bg);
     border-radius: 30px;
     margin-top: 40px;
 }
@@ -181,7 +187,7 @@
     font-family: 'Sora';
     font-size: 18px;
     line-height: 130%;
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
     padding-bottom: 24px;
     padding-top: 0;
 }
@@ -190,7 +196,7 @@
     font-weight: 600;
     font-size: 18px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     padding-bottom: 24px;
     padding-top: 0;
 }
@@ -202,14 +208,14 @@
 }
 .market-mobile-item{
     width: 100%;
-    background: #1D1428;
+    background: var(--market-bg);
     border-radius: 15px;
     padding: 31px 16px;
     font-family: 'Sora';
     font-weight: 600;
     font-size: 18px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-bottom: 32px;
 }
 .market-mobile-item > .top{
@@ -233,7 +239,7 @@
 }
 
 /* market float  */
-#market-blur{
+.market-blur{
     position: absolute;
     width: 429.82px;
     height: 648.17px;
@@ -242,6 +248,9 @@
     transform: rotate(109.58deg);
     left: -410px;
     top: 178px;
+}
+.market-blur.day{
+    background: rgba(246, 235, 219, 0.71);
 }
 /* end market  */
 
@@ -304,7 +313,7 @@
 }
 .slider-item{
     overflow:hidden;
-    background: #1D1428;
+    background: var(--slider-itm-bg);
     border-radius: 30px;
     padding:60px 30px;
     margin: 0 15px;
@@ -315,6 +324,7 @@
     height: 363px;
 }
 .active-slider-block > .active{
+    border-radius: 30px;
     height: 478px;
     padding:40px 42px;
     position: relative;
@@ -349,7 +359,7 @@
     font-weight: 600;
     font-size: 36px;
     line-height: 130%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 .active-slider-block > .active > .item-name{
     display: flex;
@@ -359,7 +369,7 @@
     font-weight: 600;
     font-size: 24px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 
 }
 .active-slider-block > .active > .item-name > img{
@@ -370,7 +380,7 @@
     font-weight: 600;
     font-size: 36px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top: 30px;
     margin-bottom: 15px;
 }
@@ -386,7 +396,7 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 180%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin: 20px 0;
 }
 .active-slider-block > .active > .item-buy{
@@ -395,7 +405,7 @@
     font-size: 24px;
     line-height: 30px;
     text-decoration-line: underline;
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
 }
 
 
@@ -411,7 +421,7 @@
     line-height: 100%;
     text-align: center;
     text-transform: capitalize;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin:30px 0;
 }
 .slider-item > .deactive > .item-price{
@@ -420,7 +430,7 @@
     font-size: 36px;
     line-height: 100%;
     text-align: center;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top: unset;
     margin-bottom: 20px;
 }
@@ -433,7 +443,7 @@
 }
 
 /* float crypto  */
-#top-crypto-blur{
+.top-crypto-blur{
     position: absolute;
     width: 433.08px;
     height: 653.09px;
@@ -443,6 +453,20 @@
     background: rgba(166, 0, 193, 0.45);
     filter: blur(300px);
     transform: rotate(109.58deg);
+}
+.top-crypto-blur.day{
+    background: #FFF3E1;
+}
+.top-crypto-blur.day1{
+    position: absolute;
+    width: 418.67px;
+    height: 774.69px;
+    right: -329px;
+    top: -509px;
+
+    background: rgba(217, 254, 253, 0.41);
+    filter: blur(300px);
+    transform: rotate(58.27deg);
 }
 #b-letter{
     position: absolute;
@@ -462,7 +486,7 @@
     font-weight: 600;
     font-size: 48px;
     line-height: 130%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top: 0px;
     margin-bottom: 60px;
 }
@@ -473,7 +497,7 @@
     font-size: 24px;
     line-height: 100%;
     text-transform: capitalize;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin: unset;
     margin-top: 70px;
 }
@@ -514,6 +538,9 @@
     top: 1%;
     left: 3%;
 }
+.wrapper-buy > button > img{
+    margin:auto;
+}
 
 .wrapper-input > div{
     display: flex;
@@ -533,7 +560,7 @@
     font-size: 24px;
     line-height: 100%;
     text-transform: capitalize;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-bottom: 15px;
 }
 .wrapper-input > div > div:last-child{
@@ -584,7 +611,7 @@
     top: 439px;
     right: -190px;
 }
-#buy-blur{
+.buy-blur{
     position: absolute;
     width: 511.89px;
     height: 589.78px;
@@ -594,6 +621,9 @@
     background: rgba(131, 108, 120, 0.58);
     filter: blur(300px);
     transform: rotate(58.27deg);
+}
+.buy-blur.day{
+    background: rgba(246, 235, 219, 0.8);
 }
 #line-buycrypt{
     position: absolute;
@@ -633,7 +663,7 @@
     font-weight: 600;
     font-size: 24px;
     line-height: 130%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 .slide-indicator > div{
     display: flex;
@@ -650,7 +680,7 @@
     font-weight: 600;
     font-size: 60px;
     line-height: 130%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top: 38px;
     margin-bottom: 59px;
 }
@@ -661,7 +691,7 @@
     font-size: 18px;
     line-height: 23px;
     text-decoration-line: underline;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     position: relative;
 }
 .slider-control > a > img{
@@ -670,7 +700,7 @@
     left: -45%;
 }
 .guide-slide-item{
-    background: #1D1428;
+    background: var(--slider-itm-bg);
     border-radius: 30px;
     width: 301px;
     height: 392px;
@@ -682,10 +712,10 @@
     text-align: center;
     padding: 30px;
     position: relative;
-    background-image: radial-gradient(circle at 100% 100%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to right, #1D1428, #1D1428), radial-gradient(circle at 0% 100%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to bottom, #1D1428, #1D1428), radial-gradient(circle at 0% 0%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to left, #1D1428, #1D1428), radial-gradient(circle at 100% 0%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to top, #1D1428, #1D1428);
+    /* background-image: radial-gradient(circle at 100% 100%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to right, #1D1428, #1D1428), radial-gradient(circle at 0% 100%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to bottom, #1D1428, #1D1428), radial-gradient(circle at 0% 0%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to left, #1D1428, #1D1428), radial-gradient(circle at 100% 0%, transparent 29px, #1D1428 29px, #1D1428 32px, transparent 32px), linear-gradient(to top, #1D1428, #1D1428);
     background-size: 32px 32px, calc(100% - 64px) 3px, 32px 32px, 3px calc(100% - 64px);
     background-position: top left,top center,top right,center right, bottom right,bottom center,bottom left,center left;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     transition: all 200ms ease-out;
 }
 .guide-slide-item.slick-current{
@@ -718,14 +748,14 @@
     font-weight: 600;
     font-size: 24px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 .guide-slide-item > div{
     font-family: 'Inter';
     font-weight: 500;
     font-size: 18px;
     line-height: 180%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 .guide-slide-item.slick-slide{
     opacity: 0;
@@ -735,7 +765,7 @@
 }
 
 /* float guide  */
-#guide-blur{
+.guide-blur{
     position: absolute;
     width: 236.93px;
     height: 561px;
@@ -746,7 +776,10 @@
     filter: blur(300px);
     transform: rotate(58.27deg);
 }
-#guide-blur-2{
+.guide-blur.day{
+    background: rgba(215, 169, 98, 0.21);
+}
+.guide-blur-2{
     position: absolute;
     width: 303.18px;
     height: 561px;
@@ -756,6 +789,9 @@
     background: rgba(115, 37, 192, 0.35);
     filter: blur(300px);
     transform: rotate(58.27deg);
+}
+.guide-blur-2.day{
+    background: rgba(162, 178, 151, 0.23);
 }
 /* end guide  */
 
@@ -769,7 +805,7 @@
     font-weight: 600;
     font-size: 60px;
     line-height: 130%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top:unset;
     margin-bottom: 60px;
     text-align: center;
@@ -792,7 +828,7 @@
     margin-bottom: 77px;
 }
 #get-start > .container{
-    background: linear-gradient(180deg, rgba(29, 20, 40, 0) 0%, #1D1428 100%);
+    background: var(--start-bg);
     border-radius: 30px;
     padding: 107px 100px;
     display: flex;
@@ -806,7 +842,7 @@
     font-size: 36px;
     line-height: 130%;
     text-align: center;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top:unset;
     margin-bottom: 40px;
 }
@@ -816,7 +852,7 @@
     font-weight: 600;
     font-size: 18px;
     line-height: 100%;
-    color: #FFF2EE;
+    /* color: #FFF2EE; */
     text-decoration: none;
     position: relative;
     background-color: transparent;
@@ -847,7 +883,7 @@
     top: -85px;
     left: -88px;
 }
-#start-blur{
+.start-blur{
     position: absolute;
     width: 303.18px;
     height: 561px;
@@ -858,7 +894,10 @@
     filter: blur(300px);
     transform: rotate(58.27deg);
 }
-#start-blur-2{
+.start-blur.day{
+    background: #F9F1E6;
+}
+.start-blur-2{
     position: absolute;
     width: 303.18px;
     height: 561px;
@@ -868,6 +907,9 @@
     background: rgba(115, 37, 192, 0.35);
     filter: blur(300px);
     transform: rotate(58.27deg);
+}
+.start-blur-2.day{
+    background: #EDE6D5;
 }
 #get-start > .wrapper-float{
     position: relative;
