--- a/contact.css
+++ b/contact.css
@@ -7,7 +7,7 @@
     font-weight: 600;
     font-size: 48px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top: unset;
     margin-bottom: 40px;
     text-align: center;
@@ -43,7 +43,7 @@
     font-weight: 600;
     font-size: 36px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-top: unset;
     margin-bottom: 40px;
 }
@@ -61,7 +61,7 @@
     font-family: 'Sora';
     font-size: 18px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 .input-contact-wrapper > div > .input{
     margin-bottom: 48px;
@@ -85,14 +85,14 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 .input-contact-wrapper > div > .detail{
     font-family: 'Inter';
     font-weight: 500;
     font-size: 14px;
     line-height: 180%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
 }
 
 
@@ -103,7 +103,7 @@
     font-size: 16px;
     line-height: 100%;
     text-align: center;
-    color: #FFF2EE;
+    /* color: #FFF2EE; */
     background: transparent;
     border: unset;
     appearance: none;
