--- a/market.css
+++ b/market.css
@@ -8,7 +8,7 @@
     font-weight: 600;
     font-size: 48px;
     line-height: 130%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     text-align: center;
     margin: unset;
 }
@@ -23,7 +23,7 @@
     font-family: 'Sora';
     font-size: 18px;
     line-height: 130%;
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
     padding-bottom: 24px;
     padding-top: 0;
 }
@@ -32,7 +32,7 @@
     font-weight: 600;
     font-size: 18px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     padding-bottom: 24px;
     padding-top: 0;
 }
@@ -45,7 +45,7 @@
     font-size: 16px;
     line-height: 100%;
     text-align: center;
-    color: #FFF2EE;
+    /* color: #FFF2EE; */
     background: transparent;
     border: unset;
     appearance: none;
@@ -82,7 +82,7 @@
     filter: blur(25px);
 }
 /* floating market  */
-#market-blur{
+.market-blur{
     position: absolute;
     width: 429.82px;
     height: 648.17px;
@@ -91,6 +91,9 @@
     transform: rotate(109.58deg);
     left: -410px;
     top: 178px;
+}
+.market-blur.day{
+    background: rgba(217, 254, 253, 0.75);
 }
 /* market end */
 
@@ -108,7 +111,7 @@
     font-weight: 600;
     font-size: 18px;
     line-height: 100%;
-    color: #F8F7FC;
+    /* color: #F8F7FC; */
     margin-bottom: 32px;
 }
 .market-mobile-item > .top{
