--- a/global.css
+++ b/global.css
@@ -31,6 +31,8 @@
     font-family: 'Inter', sans-serif;
     color: var(--text-day-night);
     z-index: -1;
+    user-select: unset;
+    user-zoom: unset;
 }
 .invert{
     filter: var(--invert);
