--- a/nav.css
+++ b/nav.css
@@ -59,19 +59,22 @@
 #wrapper-mobile-menu{
     position: absolute;
     top: 0;
-    margin-top: 16px;
+    /* margin-top: 16px; */
     width: 100vw;
-    height: 0;
+    height: 100vh;
     overflow: hidden;
     background: var(--market-bg);
     z-index: 3;
+    padding-top: 110px;
+    transform: translateY(-100%);
     transition: all 200ms ease;
 }
 #wrapper-mobile-menu.show{
-    top: 0px;
+    transform: translateY(0%);
+    /* top: 0px;
     padding-top: 110px;
     height: 100vh;
-    margin: unset;
+    margin: unset; */
 }
 #wrapper-mobile-menu > div{
     overflow: auto;
