--- a/nav.css
+++ b/nav.css
@@ -56,19 +56,14 @@
 }
 .dropdown-wrapper{
     position: absolute;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 56px;
+    padding-bottom: 56px;
     top: 109px;
     z-index: 2;
     width: 100%;
-    max-height: 0;
     background: var(--market-bg);
     overflow: hidden;
-    transition: all 100ms ease;
-}
-.dropdown-wrapper.show{
-    padding-top: 56px;
-    padding-bottom: 56px;
+    display: none;
 }
 .dropdown-wrapper > .container{
     padding: unset;
@@ -143,22 +138,13 @@
 #wrapper-mobile-menu{
     position: absolute;
     top: 0;
-    /* margin-top: 16px; */
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     background: var(--market-bg);
     z-index: 3;
     padding-top: 110px;
-    transform: translateY(-100%);
-    transition: all 200ms ease;
-}
-#wrapper-mobile-menu.show{
-    transform: translateY(0%);
-    /* top: 0px;
-    padding-top: 110px;
-    height: 100vh;
-    margin: unset; */
+    display: none;
 }
 #wrapper-mobile-menu > div{
     overflow: auto;
