--- a/gateio.css
+++ b/gateio.css
@@ -269,6 +269,51 @@
         font-size: 20px;
         line-height: 150%;
     }
+    .section1-itm{
+        margin-bottom: 0;
+        margin-right: 24px;
+        width: 281px;
+        height: auto;
+    }
+    .section1-itm > img{
+        height: 171px;
+    }
+    .section1-title{
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 130%;
+    }
+    .section-1-detail{
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 180%;
+    }
+    .section1-label,
+    .section1-title,
+    .section1-itm > img,
+    .section1-progress{
+        margin-bottom: 24px;
+    }
+    .section1-label > div > span:first-child{
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 100%;
+    }
+    .section1-label > div > span:last-child,
+    .section1-itm > label{
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 100%;
+    }
+    .section1-itm > label{
+        margin-top: 24px;
+        width: fit-content;
+        display: block;
+    }
+    .section1-progress > div{
+        height: 11.39px;
+    }
+
 }
 @media all and (max-width: 568px){
 
