--- a/global.css
+++ b/global.css
@@ -90,3 +90,37 @@ body::before{
     max-width: 1170px;
     padding:0 21px;
 }
+
+
+
+.slick-dots {
+	display: flex;
+	justify-content: center;
+	
+	margin: 0;
+	padding: 1rem 0;
+	
+	list-style-type: none;
+}
+.slick-dots > li {
+    margin: 0 0.25rem;
+}
+
+.slick-dots > li > button {
+    display: block;
+    width: 8px;
+    height: 8px;
+    padding: 0;
+    
+    border: none;
+    border-radius: 100%;
+    background-color: #342A41;
+    
+    text-indent: -9999px;
+
+    filter: var(--invert);
+}
+
+.slick-dots > li.slick-active button {
+    background-color: #FFFFFF;
+}
