--- a/home.css
+++ b/home.css
@@ -221,7 +221,7 @@
 .fade-label{
     color: rgba(248, 247, 252, 0.7) !important;
 }
-.market-mobile{
+.market-table-mobile{
     display: none;
 }
 .market-mobile-item{
@@ -326,14 +326,14 @@
     z-index: 1;
     /* padding: 30px 0px; */
 }
-.slick-dots{
+.slick-dot{
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding-right: 36px;
     flex-direction: row-reverse;
 }
-.slick-dots > div{
+.slick-dot > div{
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -949,6 +949,48 @@
     background-position: top left,top center,top right,center right, bottom right,bottom center,bottom left,center left;
     background-repeat: no-repeat;
 }
+.market-btn-buy{
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 100%;
+    text-align: center;
+    background: transparent;
+    border: unset;
+    appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
+    
+    width: 162px;
+    height: 54px;
+    border-radius: 15px;
+    position: relative;
+    background-image: radial-gradient(circle at 100% 100%, transparent 13px, #9db39c 13px, #9db39c 16px, transparent 16px), linear-gradient(to right, #9db39c, #5abedf), radial-gradient(circle at 0% 100%, transparent 13px, #5abedf 13px, #5abedf 16px, transparent 16px), linear-gradient(to bottom, #5abedf, #9db39c), radial-gradient(circle at 0% 0%, transparent 13px, #9db39c 13px, #9db39c 16px, transparent 16px), linear-gradient(to left, #9db39c, #dda85d), radial-gradient(circle at 100% 0%, transparent 13px, #dda85d 13px, #dda85d 16px, transparent 16px), linear-gradient(to top, #dda85d, #9db39c);
+    background-size: 16px 16px, calc(100% - 32px) 3px, 16px 16px, 3px calc(100% - 32px);
+    background-position: top left,top center,top right,center right, bottom right,bottom center,bottom left,center left;
+    background-repeat: no-repeat;
+    
+    transition: all 200ms ease-out;
+}
+.market-btn-buy:hover{
+    color: #FFF2EE;
+    background: rgb(90,190,223);
+    background: linear-gradient(65deg, rgba(90,190,223,1) 0%, rgba(221,168,91,1) 100%);
+}
+.market-btn-buy::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background-color: transparent;
+    background-image: radial-gradient(circle at 100% 100%, transparent 13px, #9db39c 13px, #9db39c 16px, transparent 16px), linear-gradient(to right, #9db39c, #5abedf), radial-gradient(circle at 0% 100%, transparent 13px, #5abedf 13px, #5abedf 16px, transparent 16px), linear-gradient(to bottom, #5abedf, #9db39c), radial-gradient(circle at 0% 0%, transparent 13px, #9db39c 13px, #9db39c 16px, transparent 16px), linear-gradient(to left, #9db39c, #dda85d), radial-gradient(circle at 100% 0%, transparent 13px, #dda85d 13px, #dda85d 16px, transparent 16px), linear-gradient(to top, #dda85d, #9db39c);
+    background-size: 16px 16px, calc(100% - 32px) 3px, 16px 16px, 3px calc(100% - 32px);
+    background-position: top left,top center,top right,center right, bottom right,bottom center,bottom left,center left;
+    background-repeat: no-repeat;
+    filter: blur(25px);
+}
 
 /* float get start  */
 #w-letter{
@@ -1069,8 +1111,17 @@
     }
 }
 @media all and (max-width: 768px){
-    .market-mobile{
+    .market-btn-buy{
+        margin: auto;
         display: block;
+        margin-top: 20px;
+    }
+    .market-table-mobile{
+        display: block;
+    }
+    .market-mobile-item{
+        width: 320px;
+        margin: 0 8px;
     }
     .top-slider-crypto,
     .market-table{
