--- a/seeking-list-partners.css
+++ b/seeking-list-partners.css
@@ -400,11 +400,12 @@
     }
 
     .spect-offset{
-        width: 0px;
+        display: none;
     }
 
     .wrapper-spect{
         display: block;
+        margin: 0px;
     }
     #spect > .container > h1{
         font-family: 'Sora';
@@ -417,12 +418,20 @@
     }
     .spect-item{
         width: 100%;
-        border-radius: 30px;
+        border-radius: 15px;
         /* display: flex;
         flex-direction: row; */
         align-items: center;
         padding: 39px;
-        margin: 20px;
+        margin: 20px 0;
+
+        /* width: 35%;
+        border-radius: 15px; */
+        /* display: flex;
+        flex-direction: row; */
+        /* align-items: center;
+        padding: 39px;
+        margin: 20px; */
     }
 
     .wrapper-message{
@@ -451,29 +460,30 @@
 
     .message-person-wrapper{
         display: flex;
-        /* flex-direction: column; */
         justify-content: center;
     }
 
+    #advantage{
+        margin-top: 20px;
+    }
     .wrapper-advantage{
         display: block;
-        justify-content: center;
     }
     .advantage-item{
+        margin-bottom: 15px;
         width: 100%;
         display: flex;
-        flex-direction: column;
-        align-items: left;
-        margin: 0 50px;
-        justify-items: left;
+        flex-direction: row;
+        justify-content: left;
+        margin-left: 0px;
     }
     .advantage-item > img{
         width: 77px;
         /* border: solid 1px; */
     }
     .advantage-item > p{
-        /* border: solid 1px; */
-        margin-top: 34px;
+        margin-left: 10px;
+        margin-top: 5px;
         margin-bottom: unset;
         font-family: 'Sora';
         font-weight: 600;
